--- a/Perspective/Base.lproj/Main.storyboard
+++ b/Perspective/Base.lproj/Main.storyboard
@@ -162,7 +162,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cWa-uC-3or" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2580" y="1218"/>
+            <point key="canvasLocation" x="2580" y="1737"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="hhi-no-6C5">
@@ -176,6 +176,7 @@
                     <connections>
                         <segue destination="vm0-lQ-1ah" kind="relationship" relationship="viewControllers" id="eHT-H1-iwR"/>
                         <segue destination="lit-Ha-iCu" kind="relationship" relationship="viewControllers" id="Bs5-F1-2lQ"/>
+                        <segue destination="rat-vr-7o6" kind="relationship" relationship="viewControllers" id="2bd-ch-6g9"/>
                         <segue destination="YfZ-7k-6gf" kind="relationship" relationship="viewControllers" id="QqM-5z-FQv"/>
                     </connections>
                 </tabBarController>
@@ -411,6 +412,41 @@
             </objects>
             <point key="canvasLocation" x="1709.5999999999999" y="385.45727136431788"/>
         </scene>
+        <!--PERSPECTIVE-->
+        <scene sceneID="jnR-ah-wF7">
+            <objects>
+                <collectionViewController id="6b8-Ge-Qut" customClass="UserPostsCollectionViewController" customModule="Perspective" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="pYH-Fm-Mle">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="UxA-4M-IUq">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="userPostCell" id="h2E-fS-rka" customClass="UserPostsCollectionViewCell" customModule="Perspective" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="6b8-Ge-Qut" id="JeT-mP-JNd"/>
+                            <outlet property="delegate" destination="6b8-Ge-Qut" id="5q3-da-b5Z"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="PERSPECTIVE" id="kGs-HR-zBQ"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SVv-JX-arS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2580" y="1059"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="dpC-0a-itw">
             <objects>
@@ -428,11 +464,31 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kUF-D9-pLE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1710" y="1218"/>
+            <point key="canvasLocation" x="1710" y="1738"/>
+        </scene>
+        <!--User Posts-->
+        <scene sceneID="dOl-qz-exP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rat-vr-7o6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="User Posts" image="UserPostsIcon" id="xXR-vI-fKR"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5P1-5k-iIc">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6b8-Ge-Qut" kind="relationship" relationship="rootViewController" id="RKe-I9-ELX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fD3-LF-EpV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1710" y="1059"/>
         </scene>
     </scenes>
     <resources>
         <image name="CameraIcon" width="25" height="25"/>
         <image name="HomeIcon" width="25" height="25"/>
+        <image name="UserPostsIcon" width="25" height="25"/>
     </resources>
 </document>
